# RigidBody

./: .gitignore  CMakeLists.txt  barygraph.py  compile.sh  dif.cpp  dif.h  energygraph.py  install.sh  main.cpp  render.cpp  render.h
